# exercises

./: .gitignore  CMakeLists.txt  README.md  env.yml  interview-cake.ipynb  main.cpp
cpp/: CMakeLists.txt  cprogramming.cpp  cracking-the-coding-interview.cpp  interview_cake.cpp  leetcode.cpp  selected-problems.cpp  test.cpp
cpp/coding-challenges/: CMakeLists.txt  main.cpp
cpp/coding-challenges/hackerrank/: ai-maze-escape.cpp  cpp-intro-bit-array.cpp
cpp/coding-challenges/project-euler/: problem20.cpp  problem303.cpp  problem4.cpp  problem40.cpp  problem5.cpp
cpp/practice-problems/: install.sh  interview_cake.cpp
hackerrank/: ai-bot-building-1.cpp  ai-bot-building.cpp  ai-maze-escape.cpp  cpp-intro-bit-array.cpp  input.txt
javascript/: package.json
javascript/codility/: lessons.js  lessons.spec.js
javascript/codility-lessons/: 5-CountDiv.js
project-euler/: CMakeLists.txt  Num.cpp  Num.h  problem10.cpp  problem100.cpp  problem20.cpp  problem3.cpp  problem30.cpp  problem303.cpp  problem40.cpp  problem6.cpp
python/: cracking-the-coding-interview.ipynb  example-google-interview.ipynb  interview-cake.ipynb
python/kaggle/: env.yml
python/practice-problems/: cracking-the-coding-interview.ipynb
titanic/: test.py
titanic/a-journey-through-titanic/: notebook.ipynb
titanic/datacamp-tutorial/: test.py
titanic/dataquest-tutorial/: test.py
web/material-ui-clone/: package.json
web/material-ui-clone/src/: App.tsx
web/material-ui-clone/src/Custom/: Button.css  Button.tsx
